rnsc/tests/snapshots/error-parser-class_header-access_flags-private.snap
---
source: tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class private HelloWorld
.super java/lang/Object
.class_end
----- STDERR -----
[E-015] Error: invalid class access flag 'private'
   ╭─[ test_data/integration/error/parser/class_header/access_flags/private.rns:1:8 ]
   │
 1 │ .class private HelloWorld
   │        ───┬───  
   │           ╰───── 'private' is not a valid class access flag
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-015
───╯
----- HASH -----
not generated
