rnsc/tests/snapshots/error-parser-class_header-access_flags-varargs.snap
---
source: tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class varargs HelloWorld
.super java/lang/Object
.class_end
----- STDERR -----
[E-015] Error: invalid class access flag 'varargs'
   ╭─[ test_data/integration/error/parser/class_header/access_flags/varargs.rns:1:8 ]
   │
 1 │ .class varargs HelloWorld
   │        ───┬───  
   │           ╰───── 'varargs' is not a valid class access flag
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-015
───╯
----- HASH -----
not generated
